fix compilation error.